--- a/index.html
+++ b/index.html
@@ -744,23 +744,32 @@
   <h2 style="padding-top: 20px; text-align: center;">Why Safe Tax?</h2>
   <div class="features">
     <div class="feature">
-      <p>At Safe Tax LLC, your safety and security come first. Established in Finex , AZ, we understand that trusting someone with your tax information is a significant decision, especially in an age where data breaches and identity theft are growing concerns. That’s why we’ve implemented industry-leading security measures, including the latest encryption technologies and secure systems, to protect your sensitive information. With stringent protocols and regular audits, we ensure your data is never compromised. Our commitment to safeguarding your personal and financial information sets us apart, giving you peace of mind that your tax filings are in the best hands.</p>
+      <p>At Safe Tax LLC, your safety and security come first. Established in Phoenix,AZ .we understand that trusting someone with your tax information is a significant decision, especially in an age where data breaches and identity theft are growing concerns. That’s why we’ve implemented industry-leading security measures, including the latest encryption technologies and secure systems, to protect your sensitive information. With stringent protocols and regular audits, we ensure your data is never compromised. Our commitment to safeguarding your personal and financial information sets us apart, giving you peace of mind that your tax filings are in the best hands.</p>
     </div>
     <div class="feature">
-      <p>Our dedication to safety goes beyond technology. We prioritize transparency and integrity, making sure you feel confident and informed throughout your experience with us. Whether you’re filing taxes for the first time or seeking ongoing tax planning, our team of experts stays current with the latest tax laws to provide accurate, tailored advice. We also take the time to educate you about tax processes and security measures, ensuring you understand how your information is handled. At Safe Tax LLC, we combine expertise, trust, and safety to deliver the best possible tax services without compromise.</p>
+      <p>Our dedication to safety goes beyond technology. We prioritize transparency and integrity, making sure you feel confident and informed throughout your experience with us. Whether you’re filing taxes for the first time or seeking ongoing tax planning, our team of experts stays current with the latest tax laws to provide accurate, tailored advice. We also take the time to educate you about tax processes and security measures, ensuring you understand how your information is handled. At Safe Tax LLC, we combine expertise, trust, and safety to deliver the best possible tax services without compromise.</p>
     </div>
+    <div class="feature">
+      <p>✔IRS Certified Tax Experts - Professional guidance from certified professionals<br><br>
+
+         ✔Maximum Tax Savings - <br>Explore all deductions and credits for the best refund <br><br>
+
+         ✔Secure Data Transfer -<br> State-of-the-art encryption ensures your privacy<br><br>
+
+         ✔Post-Return Filing Support - Assistance even after filing your taxes</p>
   </div>
 </section>
 <section id="about">
   <h2 style="padding-top: 20px; text-align: center;">About Us</h2>
   <div class="features">
     <div class="feature">
-      <p>Safe Tax LLC is a trusted tax filing company based in the United States, established in 2024. Our mission is to provide reliable, secure, and efficient tax-related services to individuals and businesses. We were founded on the belief that everyone deserves professional support from experts who genuinely care about their financial well-being. With years of combined experience, our team is dedicated to simplifying the complexities of tax filing while ensuring compliance and maximizing savings.</p>
+      <p>Safe Tax LLC is a trusted tax filing company based in the United States. Our mission is to provide reliable, secure, and efficient tax-related services to individuals and businesses. We were founded on the belief that everyone deserves professional support from experts who genuinely care about their financial well-being. With years of combined experience, our team is dedicated to simplifying the complexities of tax filing while ensuring compliance and maximizing savings.</p>
     </div>
     <div class="feature">
-      <p>At Safe Tax LLC, we prioritize the security and privacy of our clients’ information. By leveraging the latest technology and adhering to industry best practices, we ensure your sensitive data is always protected. Our tax professionals stay current with evolving tax laws and regulations, providing accurate and personalized advice tailored to your unique needs. Whether you’re filing personal taxes, managing payroll, or planning long-term financial strategies, we are here to make the process seamless and stress-free.</p>
+      <p>At Safe Tax LLC, we prioritize the security and privacy of our clients’ information. By leveraging the latest technology and adhering to industry best practices, we ensure your sensitive data is always protected. Our tax professionals stay current with evolving tax laws and regulations, providing accurate and personalized advice tailored to your unique needs. Whether you’re filing personal taxes, managing payroll, or planning long-term financial strategies, we are here to make the process seamless and stress-free.</p>
     </div>
-  </div>
+    </div>
+  </div><div class=""></div>
 </section>
       </aside>
   </div>
@@ -775,7 +784,7 @@
           <a href="mailto:contact@safetaxllc.com">Email:contact@safetaxllc.com </a>
           <a href="tel:+14804549701">Call Us:+14804549701</a>
           <a href="tel:+14804549701">Costumer care:+14804549701</a>
-        </div>
+        </div>
     </div>
   </section>
   <a href="https://wa.me/+14804549701" target="_blank" class="whatsapp-icon">
